--- a/404.md
+++ b/404.md
@@ -1,1 +1,5 @@
-# Nope!
+## Couldn't find what you were looking for, sorry!
+
+Enjoy some random content here instead.
+
+![Shi(e)t Mondrian 01](https://p3bm.github.io/images/shiet_mondrian.png)
