added stupid 404 pun

--- a/404.md
+++ b/404.md
@@ -1,4 +1,4 @@
-## Couldn't find what you were looking for, sorry!
+# Couldn't find what you were looking for (oh, four?), sorry!
 
 Enjoy some random content here instead.
 
